# Prostata

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  techstack.md  techstack.yml  tox.ini
src/auto-prostate/: cmdline.py  database.py  python_mysql_dbconfig.py  query.py
src/auto_prostate/: cmdline.py  database.py  python_mysql_dbconfig.py  query.py
