[metadata]
name = prostata
version = file: VERSION.txt
license = MIT
license_files = LICENSE.txt
author = Erling Andersen
author_email = Erling.Andersen@Helse-Bergen.NO
description = Prostate
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erling6232/Prostata
project_urls =
        Documentation = https://prostata.readthedocs.io
        Source Code = https://github.com/erling6232/prostata
keywords =
    dicom
    python
    medical
    imaging
classifiers =
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        Intended Audience :: Healthcare Industry
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Scientific/Engineering :: Medical Science Apps.

[bdist_wheel]
universal=0

[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.6,<3.12
install_requires =
    imagedata
    pydicom>=2.1.0
    pynetdicom>=1.2.0, <2
    numpy >= 1.13
    scipy
    matplotlib
    configparser
    mysql-connector-python
setup_requires =
    build

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    search_prostate = auto-prostate.cmdline:search

[coverage:run]
branch = True

[coverage:paths]
source =
   prostata

[coverage:report]
show_missing = True

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .tox, .eggs, .coveragerc, __pycache__, tests/, docs/, build/, dist/, data/
# select = E,F
# ignore = E126,E231,E226,E265,E402,E731,F401,F721,F821,F841
# per-file-ignores =
#     src/imagedata/__init__.py:F401
#     src/imagedata/collections.py:F721
